# CAdd

./: Untitled  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/src/androidTest/java/com/example/cadd/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: OfflineServiceApi.h  POSOfflineServiceApi.h
app/src/main/java/com/example/android/1test/: MainActivity.kt
app/src/main/java/com/example/cadd/: MainActivity.kt
app/src/main/java/com/example/cadd/jni/: HelloJNICpp.java  JNITools.java  TestI.java
app/src/main/res/layout/: activity_main.xml  item.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cadd/: ExampleUnitTest.kt
defaultnative/: build.gradle.kts
defaultnative/src/androidTest/java/com/example/defaultnative/: ExampleInstrumentedTest.kt
defaultnative/src/main/cpp/: CMakeLists.txt  defaultnative.cpp
defaultnative/src/main/java/com/example/defaultnative/: DefaultNativeLib.kt  Person.kt
defaultnative/src/test/java/com/example/defaultnative/: ExampleUnitTest.kt
dllnative/: build.gradle.kts
dllnative/src/androidTest/java/com/example/dllnative/: ExampleInstrumentedTest.kt
dllnative/src/main/cpp/: CMakeLists.txt  POSOfflineServiceApiI.cpp  POSOfflineServiceApiI.h  dllnative.cpp  test.cpp
dllnative/src/main/java/com/example/dllnative/: DllInterface.java  DllNativeLib.kt  POSOfflineServiceApiI.java  Test.java
dllnative/src/test/java/com/example/dllnative/: ExampleUnitTest.kt
dlopennative/: build.gradle.kts
dlopennative/src/androidTest/java/com/example/dlopennative/: ExampleInstrumentedTest.kt
dlopennative/src/main/cpp/: CMakeLists.txt  caculate.cpp  demo.cpp  demo.out  dlopennative.cpp  test-dlopen.cpp
dlopennative/src/main/java/com/example/dlopennative/: DLOpenNativeLib.kt
dlopennative/src/test/java/com/example/dlopennative/: ExampleUnitTest.kt
dynamicnative/: build.gradle.kts
dynamicnative/src/androidTest/java/com/example/dynamicnative/: ExampleInstrumentedTest.kt
dynamicnative/src/main/cpp/: CMakeLists.txt  dynamicnative.cpp
dynamicnative/src/main/java/com/example/jni/dynamic/: JniOnloadTest.java
dynamicnative/src/test/java/com/example/dynamicnative/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jnanative/: build.gradle.kts
jnanative/src/androidTest/java/com/example/jnanative/: ExampleInstrumentedTest.kt
jnanative/src/main/cpp/: CMakeLists.txt  hello.cpp  jna.cpp  test.out
jnanative/src/main/java/com/example/jnanative/: JNANativeLib.kt
jnanative/src/test/java/com/example/jnanative/: ExampleUnitTest.kt
jnanative1/: build.gradle.kts
jnanative1/src/androidTest/java/com/example/jnanative1/: ExampleInstrumentedTest.kt
jnanative1/src/main/cpp/: CMakeLists.txt  jnanative1.cpp  wer.cpp  wer.h
jnanative1/src/main/java/com/example/jnanative1/: NativeLib.kt  WerI.java
jnanative1/src/test/java/com/example/jnanative1/: ExampleUnitTest.kt
staticnative/: build.gradle.kts
staticnative/src/androidTest/java/com/example/staticnative/: ExampleInstrumentedTest.kt
staticnative/src/main/cpp/: CMakeLists.txt  staticnative.cpp
staticnative/src/main/java/com/example/staticnative/: StaticNative.kt
staticnative/src/test/java/com/example/staticnative/: ExampleUnitTest.kt
toolchains1/: build.gradle.kts
toolchains1/src/androidTest/java/com/example/toolchains1/: ExampleInstrumentedTest.kt
toolchains1/src/main/cpp/: CMakeLists.txt  toolchains1.c  toolchains1.h  toolchains2.cpp  toolchains2.h  toolchains3.cpp  toolchains3.h
toolchains1/src/main/java/com/example/toolchains1/: NativeLib.kt
toolchains1/src/test/java/com/example/toolchains1/: ExampleUnitTest.kt
